# homework

./: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  todo.md  wrangler.toml  技术方案文档.md
.github/workflows/: deploy.yml
app/: __init__.py  entry.py  ui_assets.py
app/core/: agent.py  context.py  http.py  intent_interpreter.py  intents.py  models.py  prompts.py  task_protocol.py  task_slot_extractor.py
app/providers/: embedding_base.py  embedding_remote.py  llm_base.py  openrouter_chat.py
app/routes/: admin.py  chat.py  files.py  research.py  tasks.py
app/runtime/: agent_loop.py  prompt_builder.py  prompt_bundle_registry.py  session_context.py  skills_loader.py  tool_registry.py
app/services/: cloudflare_d1_repo.py  cloudflare_r2_store.py  d1_repo.py  document_parse_router.py  file_parser.py  (+15 more)
docs/: IMPLEMENTATION.md  INTERVIEW_E2E_DEMO.md  INTERVIEW_IMPLEMENTATION_BRIEF.md  MANUAL_FRONTEND_TEST.md  TEST_PLAN_ACCEPTANCE.md
migrations/: 001_init.sql
scripts/: embed_ui_assets.py  run_demo_e2e.py
tests/: test_agent_file_qa.py  test_agent_task_flow.py  test_agent_tool_routing.py  test_context_manager.py  test_demo_e2e_acceptance.py  test_file_parser.py  test_file_service_cleanup.py  test_file_video_queue_ingest.py  test_intent_interpreter_file_modes.py  test_mistral_document_parse.py  test_openrouter_chat.py  test_openrouter_omni_media_parse.py  test_profile_and_context_flow.py  test_prompt_bundle_registry.py  test_research_service.py  test_search_and_web_fetch.py  test_task_protocol.py  test_task_slot_extractor.py
(+20 files in other folders)
